going to implementing the throttle fn

--- a/debounce/NumOfClick/index.html
+++ b/debounce/NumOfClick/index.html
@@ -8,6 +8,6 @@
     <button id="debounceBtn">Click Me</button>
     <p id="status">Waiting for clicks...</p>
 
-    <script src="./src/NumOfClick.js"></script>
+    <script src="./src/numOfClick.js"></script>
   </body>
 </html>
