--- a/throttling/NumOfClick/index.html
+++ b/throttling/NumOfClick/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>NumOfClick</title>
   </head>
   <body>
-    <script src="./src/throttling.js"></script>
+    <button id="throttleBtn">Click Me</button>
+    <p id="status">Waiting for click...</p>
+
+    <script src="./src/numOfClick.js"></script>
   </body>
 </html>
