throttling: button click has been completed

--- a/throttling/NumOfClick/index.html
+++ b/throttling/NumOfClick/index.html
@@ -9,6 +9,7 @@
     <button id="throttleBtn">Click Me</button>
     <p id="status">Waiting for click...</p>
 
-    <script src="./src/numOfClick.js"></script>
+    <!-- <script src="./src/numOfClick.js"></script> -->
+     <script src="./src/usingFlag.js"></script>
   </body>
 </html>
